# Wolfie3D

./: .clang-format  .env.cmake  .gitignore  .gitmodules  CMakeLists.txt  README.md  reference.cpp  windowsExample.env.cmake
assets/models/2.0/DamagedHelmet/glTF/: DamagedHelmet.gltf
shaders/: blinn_phong.frag  brdf_lut.frag  irradiance.frag  irradiance.vert  pbr.frag  pbr.vert  prefilter.frag  prefilter.vert  shader.frag  shader.vert  skybox.frag  skybox.vert
src/: application.cpp  application.hpp  common.cpp  common.hpp  controller.cpp  controller.hpp  device.cpp  device.hpp  gltf_loader.cpp  gltf_loader.hpp  helper.cpp  helper.hpp  instance.cpp  instance.hpp  main.cpp  memory.cpp  memory.hpp  model.cpp  model.hpp  pbr_baker.cpp  pbr_baker.hpp  renderer.cpp  renderer.hpp  resource_manager.cpp  resource_manager.hpp  scene_graph.hpp  swapchain.cpp  swapchain.hpp  tiny_gltf.cpp  vk_mem_alloc.cpp  window.cpp  window.hpp
src/common/: bit_flags.hpp  common.hpp  cvar.cpp  cvar.hpp  error.hpp  file_utils.cpp  file_utils.hpp  logging.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp
src/core/: command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  descriptor_allocator.cpp  descriptor_allocator.hpp  device.cpp  device.hpp  framebuffer.cpp  framebuffer.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  image_resource.cpp  image_resource.hpp  image_view.cpp  image_view.hpp  instance.cpp  instance.hpp  memory.cpp  memory.hpp  physical_device.cpp  physical_device.hpp  pipeline_layout.cpp  pipeline_layout.hpp  render_pass.cpp  render_pass.hpp  renderer.cpp  renderer.hpp  sampler.cpp  sampler.hpp  surface.cpp  swapchain.cpp  swapchain.hpp  sync_objects.cpp  sync_objects.hpp  vulkan_object.hpp  window.cpp  window.hpp
src/core/device_memory/: allocator.cpp  allocator.hpp  buffer.cpp  buffer.hpp  device_memory_object.hpp  image.cpp  image.hpp  vk_mem_alloc.cpp
src/scene_graph/: component.cpp  component.hpp  event.hpp  input_event.hpp  node.cpp  node.hpp  scene.cpp  scene.hpp  script.cpp  script.hpp
src/scene_graph/components/: aabb.cpp  aabb.hpp  camera.cpp  camera.hpp  image.cpp  image.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  pbr_material.cpp  pbr_material.hpp  perspective_camera.cpp  perspective_camera.hpp  sampler.cpp  sampler.hpp  skin.cpp  skin.hpp  submesh.cpp  submesh.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp
src/scene_graph/components/image/: ktx.cpp  ktx.hpp  stb.cpp  stb.hpp
src/scene_graph/scripts/: animation.cpp  animation.hpp  arc_ball_camera.cpp  arc_ball_camera.hpp  free_camera.cpp  free_camera.hpp  player.cpp  player.hpp
